--- a/fundamentos_de_phyton.ipynb
+++ b/fundamentos_de_phyton.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPGhbxf3/S2S/bxzNTdw43K",
+      "authorship_tag": "ABX9TyPZ6/YOcfFJhyGmrw8hJXTZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "s52sVGCvuehm"
+        "id": "s52sVGCvuehm",
+        "outputId": "bd8d560e-e52d-4654-f0a1-b3900bbd6329",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hola Mundo\n",
+            "Hola  Dani , inicial:  D i\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"Hola Mundo\")\n",
+        "nombre = \"Dani\"\n",
+        "\n",
+        "print(\"Hola \", nombre, \", inicial: \", nombre[0], nombre[3])"
+      ]
     }
   ]
 }
