--- a/fundamentos_de_phyton.ipynb
+++ b/fundamentos_de_phyton.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPZ6/YOcfFJhyGmrw8hJXTZ",
+      "authorship_tag": "ABX9TyPDdYfjQL5XWIwNboyhK/XU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,10 +31,10 @@
       "execution_count": 1,
       "metadata": {
         "id": "s52sVGCvuehm",
-        "outputId": "bd8d560e-e52d-4654-f0a1-b3900bbd6329",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bd8d560e-e52d-4654-f0a1-b3900bbd6329"
       },
       "outputs": [
         {
@@ -51,6 +51,155 @@
         "nombre = \"Dani\"\n",
         "\n",
         "print(\"Hola \", nombre, \", inicial: \", nombre[0], nombre[3])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ejercicio: crear un programa en phyton que sume dos numeros"
+      ],
+      "metadata": {
+        "id": "Vb1yjrcdw4o_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num1 = 5\n",
+        "num2 = 9.5\n",
+        "resp = num1 + num2\n",
+        "print(\"La suma es: \", resp)"
+      ],
+      "metadata": {
+        "id": "lsr1ffD_xFeQ",
+        "outputId": "6d2e50d8-02ca-457b-f189-2795f76c41d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La suma es:  14.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ejercicio, crear un programa en phyton que sume dos numeros introducidos por el usuario"
+      ],
+      "metadata": {
+        "id": "_yfeJKgh3it3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Num 1\")\n",
+        "num1 = int(input())\n",
+        "\n",
+        "print(\"Num 2\")\n",
+        "num2 = float(input())\n",
+        "\n",
+        "resp = num1 + num2\n",
+        "print(\"La suma es: \", resp)"
+      ],
+      "metadata": {
+        "id": "R3dzCu9J3yZf",
+        "outputId": "924716d2-7aae-4946-909b-f4351e907a6b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Num 1\n",
+            "10\n",
+            "Num 2\n",
+            "15\n",
+            "La suma es:  25.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Tipos de datos\n",
+        "num1 = 5 #entero\n",
+        "num2 = 5.9 #decimal\n",
+        "nombre = \"Daniel Vargas\" #cadenas\n",
+        "print(nombre, nombre[0:4], nombre[:4], nombre[-1], nombre[5:len(nombre)])\n",
+        "\n",
+        "estado = True\n",
+        "print(estado)\n",
+        "\n",
+        "print(type(nombre), type(num1), type(num2), type(estado) )"
+      ],
+      "metadata": {
+        "id": "jzBDryFZ4d3i",
+        "outputId": "9c069965-d53b-44fe-c37f-172206cb3892",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Daniel Vargas Dani Dani s l Vargas\n",
+            "True\n",
+            "<class 'str'> <class 'int'> <class 'float'> <class 'bool'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ejercicio, cree un programa en phyton que lea un numero y determine si es par o impar"
+      ],
+      "metadata": {
+        "id": "RJkzY7Xa5cMl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = int(input(\"Ingrese un numero:\"))\n",
+        "if num % 2 == 0:\n",
+        "  print(\"El numero es par\", num)\n",
+        "else:\n",
+        "    print(\"El numero es impar\")"
+      ],
+      "metadata": {
+        "id": "ZXq3mYNN5lqm",
+        "outputId": "31d90df9-f66f-4087-959c-ebb324e2b8cc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese un numero:10\n",
+            "El numero es par 10\n"
+          ]
+        }
       ]
     }
   ]
