Tarea de ejercicios

--- a/fundamentos_de_phyton.ipynb
+++ b/fundamentos_de_phyton.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPDdYfjQL5XWIwNboyhK/XU",
+      "authorship_tag": "ABX9TyNWre0rPg20Gr7GVuLK4+Rk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "s52sVGCvuehm",
         "colab": {
@@ -77,7 +77,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,7 +116,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,7 +152,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,7 +190,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -198,6 +198,303 @@
           "text": [
             "Ingrese un numero:10\n",
             "El numero es par 10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ejercicio: Uso de las funciones de usuario, con la suma de dos numeros"
+      ],
+      "metadata": {
+        "id": "Ac8IXG1mrssr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def suma (num1, num2):\n",
+        "  return num1 + num2"
+      ],
+      "metadata": {
+        "id": "sQ_QPk0_rzTm"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num1 = float(input(\"Num 1:  \"))\n",
+        "num2 = float(input(\"Num 2:  \"))\n",
+        "\n",
+        "resp = suma(num1, num2)\n",
+        "print(\"La suma es: \", resp)"
+      ],
+      "metadata": {
+        "id": "wciHbjy1r-Sb",
+        "outputId": "81afdf22-ec90-4fe1-e8df-8837d5e55aa0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Num 1:  10\n",
+            "Num 2:  15\n",
+            "La suma es:  25.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ejercicio: Coonvertir grados celsius a farenheit, usando funciones de usuario."
+      ],
+      "metadata": {
+        "id": "QgZWt7aZuAAG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def convertir_cf(c):\n",
+        "  return c*1.8 + 32"
+      ],
+      "metadata": {
+        "id": "6Xho5CESuClt"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c = float(input(\"Celsius: \"))\n",
+        "print(\"F: \", convertir_cf(c))"
+      ],
+      "metadata": {
+        "id": "zCyDJiE2uGO2",
+        "outputId": "e50d9832-c975-4837-a568-a035c00c561e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Celsius: 30\n",
+            "F:  86.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ejercicio: Determina si un numero es par o impar"
+      ],
+      "metadata": {
+        "id": "uG9k6LanuO5i"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def parImpar(num):\n",
+        "  if(num%2==0):\n",
+        "    return \"par\"\n",
+        "  return \"impar\""
+      ],
+      "metadata": {
+        "id": "ZPuDjhhkuRAr"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = int(input(\"Num: \"))\n",
+        "print(\"EL numero \", num, \" es: \", parImpar(num))"
+      ],
+      "metadata": {
+        "id": "MfL3pksWuUTv",
+        "outputId": "5f899ffd-6a8b-4371-e518-c503495c5562",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Num: 12\n",
+            "EL numero  12  es:  par\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ejercicio: Calcular el sueldo de un trabajador."
+      ],
+      "metadata": {
+        "id": "wm4b4Jxuugnz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def sueldo(numHrs, valorXHrs):\n",
+        "  sueldo = numHrs * valorXHrs * 30 # 10*1.5*30 = 450\n",
+        "  if(numHrs>8):\n",
+        "    sueldo = sueldo + (numHrs-8) * valorXHrs * 30 # 2*1.5*30 = 90\n",
+        "  return sueldo"
+      ],
+      "metadata": {
+        "id": "gfWGvSdWujuZ"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numHrs = int(input(\"Horas: \"))\n",
+        "valorXHrs = float(input(\"Valor: \"))\n",
+        "\n",
+        "print(\"Sueldo: \", sueldo(numHrs, valorXHrs))"
+      ],
+      "metadata": {
+        "id": "6yXcQD7aunT2",
+        "outputId": "de2b590a-2a89-4030-8084-c2ca7be77ba6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Horas: 8\n",
+            "Valor: 1.5\n",
+            "Sueldo:  360.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Tarea ejercicio 1: Convertir grados farenheits a celsius"
+      ],
+      "metadata": {
+        "id": "P1sCkGBOuvtc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def convertir_fc(f):\n",
+        "  return (f - 32) * 5.0/9.0\n",
+        "\n",
+        "f = float(input(\"Introduce la temperatura en grados Fahrenheit: \"))\n",
+        "print(\"Celsius: \", convertir_fc(f))"
+      ],
+      "metadata": {
+        "id": "eeF9ECwKu62z",
+        "outputId": "9ed4171e-3674-4eb7-cf54-18c35dbea927",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Introduce la temperatura en grados Fahrenheit: 86\n",
+            "Celsius:  30.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Tarea ejercicio 2: Convertir grados celsius y fahrenheit a kelvin\n"
+      ],
+      "metadata": {
+        "id": "PsLj1Av9xEkp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def celsius_kelvin(c):\n",
+        "  return c + 273.15\n",
+        "\n",
+        "def fahrenheit_kelvin(f):\n",
+        "  return (f - 32) * 5/9 + 273.15\n",
+        "\n",
+        "def main():\n",
+        "    print(\"Conversión de temperatura a Kelvin\")\n",
+        "    print(\"Seleccione la temperatura a convertir:\")\n",
+        "    print(\"1. Celsius\")\n",
+        "    print(\"2. Fahrenheit\")\n",
+        "\n",
+        "    opcion = input(\"Ingrese 1 o 2: \")\n",
+        "\n",
+        "    if opcion == '1':\n",
+        "        celsius = float(input(\"Ingrese la temperatura en grados Celsius: \"))\n",
+        "        kelvin = celsius_kelvin(c)\n",
+        "        print(f\"{celsius} grados Celsius son {kelvin} Kelvin\")\n",
+        "    elif opcion == '2':\n",
+        "        fahrenheit = float(input(\"Ingrese la temperatura en grados Fahrenheit: \"))\n",
+        "        kelvin = fahrenheit_kelvin(f)\n",
+        "        print(f\"{fahrenheit} grados Fahrenheit son {kelvin} Kelvin\")\n",
+        "    else:\n",
+        "        print(\"Opción no válida. Por favor, ingrese 1 o 2.\")\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()"
+      ],
+      "metadata": {
+        "id": "MCcQHg8vxN3C",
+        "outputId": "6afa59ea-faf2-4422-b1d6-1799c1593886",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Conversión de temperatura a Kelvin\n",
+            "Seleccione la temperatura a convertir:\n",
+            "1. Celsius\n",
+            "2. Fahrenheit\n",
+            "Ingrese 1 o 2: 2\n",
+            "Ingrese la temperatura en grados Fahrenheit: 75\n",
+            "75.0 grados Fahrenheit son 298.15 Kelvin\n"
           ]
         }
       ]
