--- a/fundamentos_de_phyton.ipynb
+++ b/fundamentos_de_phyton.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNWre0rPg20Gr7GVuLK4+Rk",
+      "authorship_tag": "ABX9TyNomvsL3r5InvQ6N+0jWy1f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -220,7 +220,7 @@
       "metadata": {
         "id": "sQ_QPk0_rzTm"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -239,7 +239,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -270,7 +270,7 @@
       "metadata": {
         "id": "6Xho5CESuClt"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -286,7 +286,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -318,7 +318,7 @@
       "metadata": {
         "id": "ZPuDjhhkuRAr"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -334,7 +334,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -367,7 +367,7 @@
       "metadata": {
         "id": "gfWGvSdWujuZ"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -385,7 +385,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,7 +423,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -482,7 +482,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -495,6 +495,182 @@
             "Ingrese 1 o 2: 2\n",
             "Ingrese la temperatura en grados Fahrenheit: 75\n",
             "75.0 grados Fahrenheit son 298.15 Kelvin\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ejercicio: elevar un numero al cuadrado"
+      ],
+      "metadata": {
+        "id": "ceX0glUN51Ul"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def elevarCuadrado(base=0, exponente=2):\n",
+        "  return base**2"
+      ],
+      "metadata": {
+        "id": "j1uwlZnb6ClF"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = int(input(\"Num: \"))\n",
+        "print(\"Cuadrado: \", elevarCuadrado(num, 3))"
+      ],
+      "metadata": {
+        "id": "2hyMbMYx6NYB",
+        "outputId": "cf899f5c-1009-4e82-ad73-0c1c80ec7712",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Num: 5\n",
+            "Cuadrado:  25\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Usando funciones lambda"
+      ],
+      "metadata": {
+        "id": "-FFqsNoi7_n0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "elevarCuadradoLambda = lambda base, exponente: base**exponente"
+      ],
+      "metadata": {
+        "id": "tNjUqPdR7-BF"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "valor = int(input(\"Num: \"))\n",
+        "print(\"Cuadrado: \", elevarCuadradoLambda(valor, 2))"
+      ],
+      "metadata": {
+        "id": "GZ4mbFTJ81PB",
+        "outputId": "7cb77c2c-aefd-4900-889a-b2e17e3217de",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Num: 3\n",
+            "Cuadrado:  9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "serie = [5,4,3,2,6,7]\n",
+        "resp = map(lambda x: x**2, serie)\n",
+        "print(list(resp))\n",
+        "\n",
+        "resp2 = map(elevarCuadrado, serie)\n",
+        "print(list(resp2))"
+      ],
+      "metadata": {
+        "id": "gYMUZTqI_XR1",
+        "outputId": "57dce762-9fb4-410e-f396-0f536caaa01a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 193
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[25, 16, 9, 4, 36, 49]\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "elevarCuadrado() missing 1 required positional argument: 'exponente'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-14-890c95da35a5>\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mresp2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0melevarCuadrado\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mserie\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresp2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: elevarCuadrado() missing 1 required positional argument: 'exponente'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ejercicio: obtener la raiz cuadrada de una serie de numeros fijos"
+      ],
+      "metadata": {
+        "id": "B8JyvkUBCznG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "numeros = [4, 16, 25, 36, 49, 64, 81, 100]\n",
+        "\n",
+        "raiz_cuadrada = [math.sqrt(numero) for numero in numeros]\n",
+        "for numero, raiz in zip(numeros, raiz_cuadrada):\n",
+        "  print(f\"la raiz cuadrada de {numero} es {raiz}\")"
+      ],
+      "metadata": {
+        "id": "VUPFipVEC-Lx",
+        "outputId": "59bf76cc-2836-45da-e41f-f38582d58926",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "la raiz cuadrada de 4 es 2.0\n",
+            "la raiz cuadrada de 16 es 4.0\n",
+            "la raiz cuadrada de 25 es 5.0\n",
+            "la raiz cuadrada de 36 es 6.0\n",
+            "la raiz cuadrada de 49 es 7.0\n",
+            "la raiz cuadrada de 64 es 8.0\n",
+            "la raiz cuadrada de 81 es 9.0\n",
+            "la raiz cuadrada de 100 es 10.0\n"
           ]
         }
       ]
