--- a/fundamentos_de_phyton.ipynb
+++ b/fundamentos_de_phyton.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNomvsL3r5InvQ6N+0jWy1f",
+      "authorship_tag": "ABX9TyO6d9Skf3XiUNkGgzH4dhuT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -517,7 +517,7 @@
       "metadata": {
         "id": "j1uwlZnb6ClF"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -533,7 +533,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -562,7 +562,7 @@
       "metadata": {
         "id": "tNjUqPdR7-BF"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -578,7 +578,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -608,7 +608,7 @@
           "height": 193
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -657,7 +657,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -672,6 +672,370 @@
             "la raiz cuadrada de 81 es 9.0\n",
             "la raiz cuadrada de 100 es 10.0\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ejercicio con funciones preconstruidas en phyton:\n",
+        "\n",
+        "- MAP"
+      ],
+      "metadata": {
+        "id": "ovWo_Xytbu-c"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numeros = [1,2,3,4,5,6,7,8,9]\n",
+        "print(list(map(lambda n: n*2, numeros)))"
+      ],
+      "metadata": {
+        "id": "dRJYYjNDcB_W",
+        "outputId": "fce10946-fb59-466f-9ff8-109fc5b0b1b7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 4, 6, 8, 10, 12, 14, 16, 18]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numeros = [1,2,3,4,5,6,7,8,9,10]\n",
+        "ntabla = int(input(\"Tabla \"))\n",
+        "print(list(map(lambda n: n*ntabla, numeros))) #tabla de multiplicar"
+      ],
+      "metadata": {
+        "id": "ZVMOFQAGci5A",
+        "outputId": "77aed347-7e23-4bdb-d28b-6113d6138e7f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tabla 5\n",
+            "[5, 10, 15, 20, 25, 30, 35, 40, 45, 50]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- FILTER\n"
+      ],
+      "metadata": {
+        "id": "2wz-v1UjdFCk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numeros = [1,2,3,4,5,6,7,8,9,10]\n",
+        "print(\"Pares: \", list(filter(lambda n: n%2==0, numeros))) #obtener solo numeros pares\n",
+        "print(\"Impares: \", list(filter(lambda n: n%2!=0, numeros))) #obtener solo numeros impares"
+      ],
+      "metadata": {
+        "id": "j44WJwCmdHQs",
+        "outputId": "2bab5097-b8ca-4f8b-c5f0-f9a8f6a79dc4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Pares:  [2, 4, 6, 8, 10]\n",
+            "Impares:  [1, 3, 5, 7, 9]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "notas = [8,9,10,7,6,9,10,2,3,1,8,9]\n",
+        "print(\"Aprobados: \", list(filter(lambda n: n>=6, notas)))\n",
+        "print(\"Reprobados: \", list(filter(lambda n: n<6, notas)))"
+      ],
+      "metadata": {
+        "id": "Pz71nMordtlo",
+        "outputId": "4b587bab-dc21-4420-8b41-b941cdeb4481",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Aprobados:  [8, 9, 10, 7, 6, 9, 10, 8, 9]\n",
+            "Reprobados:  [2, 3, 1]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- REDUCE"
+      ],
+      "metadata": {
+        "id": "FxldnoGCeb2Z"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from functools import reduce\n",
+        "numeros = [7,8,9,10]\n",
+        "print(\"Suma: \", reduce(lambda n, acum: n+acum, numeros))"
+      ],
+      "metadata": {
+        "id": "lN4kdi_RefGF",
+        "outputId": "391f125f-14ea-47a3-b9db-2057ccc9ce13",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Suma:  34\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numeros = [7,8,9,10,1,5]\n",
+        "print(\"Numero Mayor: \", reduce(lambda n, mayor: n if n>mayor else mayor, numeros))\n",
+        "print(\"Numero Menor: \", reduce(lambda n, menor: n if n<menor else menor, numeros))"
+      ],
+      "metadata": {
+        "id": "NMwxk5TvfFfQ",
+        "outputId": "c03b8fad-9895-4ac2-8f98-663b4046866a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Numero Mayor:  10\n",
+            "Numero Menor:  1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "TUPLAS"
+      ],
+      "metadata": {
+        "id": "ArmTufKQgvEF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numeros = (5,8,7,9,5,4,7)\n",
+        "print(\"Tupla: \", numeros, \"Primero: \", numeros[0], \"Ultimo: \", numeros[-1],\n",
+        "\"Rango: 2-6\", numeros[2:6])"
+      ],
+      "metadata": {
+        "id": "HGKfbfUYgwhQ",
+        "outputId": "7247dc32-46f2-4016-9e89-01036aaf3281",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tupla:  (5, 8, 7, 9, 5, 4, 7) Primero:  5 Ultimo:  7 Rango: 2-6 (7, 9, 5, 4)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "semana = (\"domingo\", \"lunes\", \"martes\", \"miercoles\", \"jueves\", \"viernes\", \"sabado\")\n",
+        "print(\"Primer dia: \", semana[0], \"; Cuantas veces se repite domingo: \", semana.count(\"domingo\"), \"Dias de la semana: \",len(semana))"
+      ],
+      "metadata": {
+        "id": "6ouXiqr_hrJr",
+        "outputId": "d814b842-f189-4fe8-e77e-eeeb3d2617a9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Primer dia:  domingo ; Cuantas veces se repite domingo:  1 Dias de la semana:  7\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import datetime\n",
+        "hoy = datetime.date.today()\n",
+        "dia = hoy.day\n",
+        "mes = hoy.month\n",
+        "año = hoy.year\n",
+        "dia_semana =  hoy.isoweekday()\n",
+        "\n",
+        "semana = (\"domingo\", \"lunes\", \"martes\", \"miercoles\", \"jueves\", \"viernes\", \"sabado\")\n",
+        "meses = (\"enero\", \"febrero\", \"marzo\", \"abril\", \"mayo\", \"junio\", \"julio\", \"agosto\", \"septiembre\", \"octubre\", \"noviembre\", \"diciembre\")\n",
+        "\n",
+        "print(\"Fecha: \", semana[dia_semana], dia, \" de \", meses[mes], \" del \",  año)"
+      ],
+      "metadata": {
+        "id": "ByucT2JpipFK",
+        "outputId": "4512123d-4fdb-4ff2-8750-a8881055bf68",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fecha:  lunes 29  de  agosto  del  2024\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tuplas = (\"Luis\", \"Juan\")\n",
+        "#tuplas[0] = \"Pedro\" #Las tuplas son inmutables, no se puede cambiar su valor.\n",
+        "\n",
+        "listas = [\"Luis\", \"Juan\"]\n",
+        "listas[0] = \"Pedro\" #Las listas son mutables, se puede cambiar su valor.\n",
+        "print(listas)"
+      ],
+      "metadata": {
+        "id": "-ueEMK7WlgKB",
+        "outputId": "35cd7fa9-fd49-47bc-bb5c-b5575dadfe5c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Pedro', 'Juan']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "listas = [5,6,7,8,9,\"Luis\", \"Jonathan\", \"Ramon\"]\n",
+        "print(listas, listas[-1])"
+      ],
+      "metadata": {
+        "id": "Tzg81lQ7l_rS",
+        "outputId": "9dfca330-ddbd-4a53-b807-bd9b462dd405",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[5, 6, 7, 8, 9, 'Luis', 'Jonathan', 'Ramon'] Ramon\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def obtenerNota(nota, eva):\n",
+        "  return eva[1]*0.3 + nota"
+      ],
+      "metadata": {
+        "id": "KkPZaxRjmwp-"
+      },
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "matriz = [ [\"Lab1\", 8],[\"Lab2\", 9], [\"Parcial\", 10] ]\n",
+        "reduce(obtenerNota, matriz, 0)"
+      ],
+      "metadata": {
+        "id": "n3LofZGjmNKE",
+        "outputId": "03f204fc-eaf6-4030-adc5-dfe1278b06df",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8.1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
         }
       ]
     }
